# rocketseat-python-desafio3-bate-papo

./: .gitignore  Makefile  README.md  pyproject.toml  pyrefly.toml
src/: app.py
src/config/: app.py  constants.py  routes.py
src/modules/: __init__.py
src/modules/chat/: routes.py
src/modules/socket/: events.py
src/templates/: index.html
src/utils/: __init__.py  http_response.py
