[project]
name = "rocketseat-python-desafio3-bate-papo"
version = "0.1.0"
description = "Rocketseat Python — Desafio 3: Bate-papo (API Flask)"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "Flask==3.1.1",
    "Werkzeug==3.1.1",
    "python-dotenv>=1.2.2",
    "pydantic==2.13.4",
    "email-validator>=2.3.0",
    "flask-socketio>=5.6.1",
    "types-flask-socketio>=5.6.0.20260518",
]
